tests/backend/checkmach/fail2.output
File "fail2.ml", line 1, characters 5-12:
Error: Annotation check for noalloc failed on function camlFail2__test_HIDE_STAMP
